# PRSpec

./: .env.example  .gitignore  CONTRIBUTING.md  GRANT_PROPOSAL.md  LICENSE  README.md  SECURITY.md  config.yaml  demo.cast  pyproject.toml  requirements.txt  run_demo.py
output/: prspec_eip1559_go-ethereum.json  prspec_eip1559_go-ethereum.md  prspec_eip1559_go-ethereum_20260203_193113.html  prspec_eip1559_go-ethereum_20260203_193113.json  prspec_eip1559_go-ethereum_20260203_193113.md  prspec_eip1559_go-ethereum_20260203_233444.html  prspec_eip1559_go-ethereum_20260203_233444.json  prspec_eip1559_go-ethereum_20260203_233444.md  prspec_eip1559_go-ethereum_20260213_232618.html  prspec_eip1559_go-ethereum_20260213_232618.json  prspec_eip1559_go-ethereum_20260213_232618.md  prspec_eip1559_go-ethereum_20260214_022403.html  prspec_eip1559_go-ethereum_20260214_022742.html  prspec_eip1559_go-ethereum_20260214_050733.html  prspec_eip1559_go-ethereum_20260214_051721.html  prspec_eip1559_go-ethereum_20260214_061708.html  prspec_eip1559_go-ethereum_20260214_062218.html  prspec_eip1559_go-ethereum_20260214_062218.json  prspec_eip1559_go-ethereum_20260214_062218.md  prspec_eip1559_go-ethereum_20260214_065639.html  prspec_eip1559_nethermind.html  prspec_eip4844_besu_20260214_085542.html  prspec_eip4844_go-ethereum_20260213_231613.html  prspec_eip4844_go-ethereum_20260213_233001.html  prspec_eip4844_go-ethereum_20260213_233001.json  prspec_eip4844_go-ethereum_20260213_233001.md  prspec_eip4844_go-ethereum_20260213_233424.html  prspec_eip4844_go-ethereum_20260213_234228.html  prspec_eip4844_go-ethereum_20260214_062845.html
prspec/: .gitignore  run_demo.py
scripts/: take_screenshots.py
src/: __init__.py  analyzer.py  cli.py  code_fetcher.py  config.py  parser.py  (+2 more)
(+12 files in other folders)
